--- a/NTierProje.UI/NTierProje.UI.csproj
+++ b/NTierProje.UI/NTierProje.UI.csproj
@@ -125,7 +125,6 @@
     <Content Include="Content\Css\bootstrap.css.map" />
     <Content Include="Content\Css\bootstrap.min.css" />
     <Content Include="Content\Css\bootstrap.min.css.map" />
-    <Content Include="Content\Css\flexslider.css" />
     <Content Include="Content\Css\font-awesome.css" />
     <Content Include="Content\Css\font-awesome.min.css" />
     <Content Include="Content\Css\jquery.countdown.css" />
@@ -137,7 +136,6 @@
     <Content Include="Content\Css\owl.transitions.css" />
     <Content Include="Content\Css\rateit.css" />
     <Content Include="Content\Css\sb-admin-2.min.css" />
-    <Content Include="Content\Css\style.css" />
     <Content Include="Content\fonts\fontawesome-webfont.svg" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\Images\1.jpg" />
@@ -264,8 +262,6 @@
     <Content Include="Content\Scripts\bootstrap.js" />
     <Content Include="Content\Scripts\bootstrap.min.js" />
     <Content Include="Content\Scripts\Cart.js" />
-    <Content Include="Content\Scripts\classie.js" />
-    <Content Include="Content\Scripts\imagezoom.js" />
     <None Include="Content\Scripts\jquery-1.9.1.intellisense.js" />
     <Content Include="Content\Scripts\jquery-1.9.1.js" />
     <Content Include="Content\Scripts\jquery-1.9.1.min.js" />
@@ -280,10 +276,6 @@
     <Content Include="Content\Scripts\morris.min.js" />
     <Content Include="Content\Scripts\raphael.min.js" />
     <Content Include="Content\Scripts\sb-admin-2.min.js" />
-    <Content Include="Content\Scripts\script.js" />
-    <Content Include="Content\Scripts\simpleCart.min.js" />
-    <Content Include="Content\Scripts\uisearch.js" />
-    <Content Include="Content\Scripts\wow.min.js" />
     <Content Include="Global.asax" />
     <Content Include="Areas\Admin\Views\web.config" />
     <Content Include="Areas\Admin\Views\Shared\_SharedAdminLayout.cshtml" />
@@ -305,6 +297,30 @@
     <Content Include="Areas\Admin\Views\Orders\List.cshtml" />
     <Content Include="Areas\Admin\Views\Orders\Details.cshtml" />
     <Content Include="Areas\Member\Views\Cart\Index.cshtml" />
+    <Content Include="Uploads\061787ef-dde3-42b4-9e63-15f8ebdeb1d9.jpg" />
+    <Content Include="Uploads\06c40b9b-a432-4b51-b986-13b0eedbb5a9.jpg" />
+    <Content Include="Uploads\0cfe137d-1be7-4109-8bff-68c1ae55651c.jpg" />
+    <Content Include="Uploads\130f17d3-adb3-46c7-b380-bcaba8c31012.jpg" />
+    <Content Include="Uploads\1b8ff7e8-c9e3-4179-b9a0-dc754daeb46f.jpg" />
+    <Content Include="Uploads\2ba3e2d4-a285-4c0c-a34a-5dd82c6158d1.jpg" />
+    <Content Include="Uploads\3e4af125-5aa4-4d67-868e-a5b0b5953206.jpg" />
+    <Content Include="Uploads\4084521e-b864-4167-a562-2c28e7362233.jpg" />
+    <Content Include="Uploads\45e1f455-ce2c-4737-a121-bd93687a61f3.jpg" />
+    <Content Include="Uploads\490fc364-2709-4a94-a579-c3cf2c71d025.jpg" />
+    <Content Include="Uploads\4b5cb021-6a51-48fb-bef6-835459392a32.jpg" />
+    <Content Include="Uploads\6f155109-cf5e-4bb6-b3eb-a84c40ddd103.jpg" />
+    <Content Include="Uploads\72ad989f-abdf-4ce3-b7f7-b5a285237e6e.jpg" />
+    <Content Include="Uploads\8165ddb5-08f4-4e01-82d4-0538f0d681a3.jpg" />
+    <Content Include="Uploads\85d553ad-3ba7-4634-8129-eee0af09608f.jpg" />
+    <Content Include="Uploads\8a98e408-02f7-415c-9db7-8569e7a4ea99.jpg" />
+    <Content Include="Uploads\94762b2b-5bff-4aa5-883a-d1566c457d8a.jpg" />
+    <Content Include="Uploads\a97d3ec9-9671-443c-a3b3-3153f7845bb8.jpg" />
+    <Content Include="Uploads\acbce710-f9dc-4451-b2e7-64841110d60f.jpg" />
+    <Content Include="Uploads\beb741eb-f287-4793-b47d-89339e9ad1a2.jpg" />
+    <Content Include="Uploads\c5686bce-9453-49b3-b51c-f130b34daede.jpg" />
+    <Content Include="Uploads\d11f8f06-4c8f-4109-b3e3-b63403469334.jpg" />
+    <Content Include="Uploads\e2e1d86e-c22c-4059-9aa8-73dbdec640a4.jpg" />
+    <Content Include="Uploads\ec458668-d23f-4084-8cd8-9c043069849e.jpg" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -338,7 +354,6 @@
   <ItemGroup>
     <Content Include="Views\web.config" />
     <Content Include="packages.config" />
-    <Content Include="Views\Shared\_SharedLayout.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Product\Detail.cshtml" />
     <Content Include="Views\Product\List.cshtml" />
@@ -367,7 +382,6 @@
     <Folder Include="Areas\Member\Views\Checkout\" />
     <Folder Include="Areas\Member\Views\Shared\" />
     <Folder Include="Models\VM\" />
-    <Folder Include="Uploads\" />
     <Folder Include="Views\Account\" />
   </ItemGroup>
   <ItemGroup>
